--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
   <modules>
     <!--module>build-tools</module-->
     <module>core</module>
+    <module>cassandra</module>
+    <module>couchdb</module>
     <!--<module>hbase</module>-->
     <!--<module>hypertable</module>-->
     <!--<module>dynamodb</module>-->
@@ -83,8 +85,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
